--- a/packages/customers/package.json
+++ b/packages/customers/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --noemit && node --loader ts-node/esm build.ts"
+    "build": "tsc --noemit && node --loader ts-node/esm build.ts",
+    "build:smithy": "smithy build",
+    "postbuild:smithy": "cpy output/open-api-terraform/openapi/CustomerRegistryApi.openapi.json ../../terraform/customers --rename=openapi.json --flat --overwrite"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
     "@types/node": "^24.0.15",
+    "cpy-cli": "^6.0.0",
     "esbuild": "^0.25.7",
     "ts-node": "^10.9.2"
   }
