--- a/packages/customers/package.json
+++ b/packages/customers/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "customers",
+  "name": "@packages/customers",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --noemit && node --loader ts-node/esm build.ts"
+    "build": "node ./node_modules/typescript/bin/tsc --noemit && node --loader ts-node/esm build.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,8 @@
     "@types/aws-lambda": "^8.10.152",
     "@types/node": "^24.0.15",
     "esbuild": "^0.25.7",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsc": "^2.0.4",
+    "typescript": "^5.9.2"
   }
 }
