feat: add openapi for consumers

--- a/packages/customers/package.json
+++ b/packages/customers/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build:smithy": "rm -rf output && smithy build && pnpm i && pnpm --filter @packages/customers-ssdk build",
-    "postbuild:smithy": "cp output/open-api-terraform/openapi/CustomersRegistryApi.openapi.json ../../terraform/customers/openapi.json",
+    "postbuild:smithy": "cp output/open-api-terraform/openapi/CustomersRegistryApi.openapi.json ../../terraform/customers/openapi.json && cp output/open-api/openapi/CustomersRegistryApi.openapi.json ./api-schema/openapi.json",
     "build": "node ./node_modules/typescript/bin/tsc --noemit && node --loader ts-node/esm build.ts"
   },
   "keywords": [],
